--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,9 +1,20 @@
 
 @media screen and (min-width: 1200px) {
     .container {
-      max-width: 1200px;
+      width: 1200px;
+    }
+    .container {
+      width: 1158px;
+      margin-left: auto;
+      margin-right: auto;
+      padding-left: 15px;
+      padding-right: 15px;
     }
   
+    .about-list {
+      width: 264px;
+    }
+
     .team-card {
       flex-basis: calc((100% - 72px) / 4);
     }
@@ -286,5 +297,156 @@
 
 .subscribe-form {
   margin-left: 80px;
+  display: flex;
 }
+
+/* ===============Footr============ */
+.footer-dcr {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #e7e9fc;
+  margin-top: 16px;
+  width: 264px;
+  margin: 0 auto;
+}
+
+.st-ftr-container{
+    display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+  margin-bottom: 72px;
+}
+
+.footer-color {
+  background-color: var(--prime-color-font);
+  padding-top: 100px;
+  padding-bottom: 100px;
+
+}
+
+.media-container {
+  /* margin-left: 120px; */
+  margin-bottom: 72px;
+}
+
+.span-white {
+  color: #f4f4fd;
+}
+
+.ftr-head {
+  display: flex;
+  justify-content: center;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-bottom: 16px;
+}
+
+.social-list-ftr {
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+}
+
+.social-list-link-ftr {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-list-link-ftr:hover,
+.social-list-link-ftr:focus {
+  background-color: #31d0aa;
+}
+
+.sbc-btn {
+  color: #ffffff;
+  width: 165px;
+  height: 40px;
+  background-color: #4d5ae5;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  font-weight: 500;
+  font-family: "Roboto";
+  font-family: inherit;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border: none;
+  margin-top: 16px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.sbc-btn:hover,
+.sbc-btn:focus {
+  background-color: #404bbf;
+  color: #ffffff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.subscribe-form{
+  display: block;
+  justify-content: center;
+  align-items: center;
+}
+.sbc-input {
+    background-color: transparent;
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  color: #ffffff;
+  padding-left: 16px;
+  outline: none;
+  margin-right: 24px;
+   margin-left: auto;
+ margin: 0;
+}
+
+.sbc-input::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.sbc-dscr {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-bottom: 16px;
+}
+
+.icon-send {
+  fill: #ffffff;
+  margin-left: 16px;
+}
+/* 
+.scb-container {
+  display: block;
+  justify-content: center;
+  align-items: center; */
+}
+
   }
