--- a/css/desktop.css
+++ b/css/desktop.css
@@ -437,6 +437,17 @@
   color: #ffffff;
   margin-bottom: 16px;
 }
+.ftr-container{
+  display: flex;
+  max-width: none;
+}
+.sbc-btn{
+  margin: 0;
+  width: 165px;
+     display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .icon-send {
   fill: #ffffff;
