--- a/css/mobile.css
+++ b/css/mobile.css
@@ -12,7 +12,10 @@
     .team-section > .container {
       max-width: 290px;
     }
-  
+
+.ftr-head {
+  justify-content: center; 
+}
     .third-header {
       display: flex;
       justify-content: center;
@@ -30,7 +33,7 @@
   }
 
   @media screen and (max-width:767px){
-    .modal-btn{
+    .modal{
       width: 95%;
       max-width: 392px;
       height: 95%;
