--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,7 @@ address {
   letter-spacing: 0.02em;
   color: var(--prime-color-font);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+padding-bottom: 28px;
 }
 .menu-link.current {
   color: var(--color-hover);
@@ -140,7 +141,7 @@ address {
   display: block;
   content: "";
   left: 0;
-  bottom: -28px;
+  bottom: 0;
   width: 100%;
   height: 4px;
   border-radius: 2px;
@@ -238,12 +239,13 @@ color: #2E2F42;
 
 .mob-menu-nav{
   display: block;
+  margin-top: 80px;
 }
 
 .mob-addres-link {
   display: block;
   font-weight: 600;
-font-size: 36px;
+font-size: 22px;
 line-height: 40px;
 text-transform: capitalize;
 color: var(--prime-color-font);
@@ -262,22 +264,22 @@ margin-bottom: 48px;
   }
 
   .mob-menu-adress{
-display: block;
+display:flex;
+flex-direction: column;
+gap: 40px;
   }
 
     .mob-cont-second{
     margin-top: auto;
   }
 
-  .menu-open{
+  /* .menu-open{
     display: inline-flex;
     margin: 0;
     padding: 0;
     border: none;
     background-color: transparent;
-    padding-top: 40px;
-  padding-bottom: 40px;
-  z-index: 1;
+      z-index: 1;
   }
 
   .menu-open .icon-menu{
@@ -290,29 +292,40 @@ display: block;
 
   .menu-open.is-open .icon-cross{
     display: none;
-  }
+  } */
 
-  .icon-menu{
+  .mobile-menu-open-icon{
   stroke: #2E2F42;
+}
+.mobile-menu-open{
+  padding: 0;
 }
 
 .page-header{
   position: relative;
 }
 .mobile-menu{
-  display: none;
-  position: absolute;
-  top: 100%;
+  /* display: none; */
+  position: fixed;
+  top: 0;
   left: 0;
   width: 100%;
-  height: 796px;
+  height: 100%;
     background-color: #ffffff;
-  padding: 40px;
-  text-align: center;
-  font-size: 36px;
+  padding: 25px;
+    font-size: 36px;
   z-index: 10;
   margin-left: auto;
-      margin-right: auto
+      margin-right: auto;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    }
+
+    .mobile-menu.is-open{
+      opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
     }
     
     .mobile-menu > .container{
@@ -325,6 +338,20 @@ display: block;
 
    .mobile-menu.is-open{
     display: block;
+   }
+
+   .mobile-menu-close{
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color:transparent;
+    border: none;
+    padding: 0;
+    line-height: 0;
+   }
+
+   .mobile-menu-cont{
+    position: relative;
    }
 /* ================HERO ================ */
 
@@ -343,6 +370,7 @@ display: block;
 
 .hero {
   padding-top: 112px;
+  padding-bottom: 112px;
     background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
@@ -562,7 +590,7 @@ display: block;
   align-items: center;
   gap: 16px;
   margin-bottom: 72px;
-}
+  }
 
 .footer-color {
   background-color: var(--prime-color-font);
